@@ -1,3 +1,14 @@
+2014-10-27  Alexey Proskuryakov  <ap@apple.com>
+
+        http/tests/cookies/third-party-cookie-relaxing.html is flaky on bots
+        https://bugs.webkit.org/show_bug.cgi?id=138098
+
+        Reviewed by Anders Carlsson.
+
+        * platform/network/cf/NetworkStorageSessionCFNet.cpp:
+        (WebCore::NetworkStorageSession::switchToNewTestingSession):
+        Create a separate session for each WKTR/DRT process when testing.
+
 2014-10-27  Chris Dumez  <cdumez@apple.com>
 
         Use separate HashMaps for common and uncommon headers in HTTPHeaderMap
